# book-stock-tracker

./: .gitignore  README.md  pyproject.toml  stock-tracker.db
.github/workflows/: pages.yml
src/book_stock_tracker/: __init__.py  __main__.py  app.py  export_pages.py  services.py  storage.py
src/book_stock_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py
tests/e2e/: test_app.py
tests/unit/: test_export_pages.py  test_services.py
