[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "book-stock-tracker"
version = "0.1.0"
description = "A keyboard-driven Textual app for tracking stock through reports."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0.0,<2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
]

[project.scripts]
book-stock-tracker = "book_stock_tracker.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
